Avoid Page from shrinking on small devices

--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@ body{
     width: 100%;
     min-width: 450px;
     font-family: 'Frank Ruhl Libre', serif;
-    overflow: auto;s
+    overflow: auto;
 }
 
 .element-shadow{
